<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellowgreen"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.diego.chiefmanagement.OptionActivity" >

    <TextView
        android:id="@+id/tv_dni"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingTop="30dp"
        android:paddingBottom="100dp"
        android:text="@string/tx_sel" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp" >

        <Button
            android:id="@+id/bt_clientes"
            android:layout_width="120dp"
            android:layout_height="100dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/clientes"
            android:onClick="clientes" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tv_nombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tx_zona_clientes"
                android:textColor="@color/orange"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/tx_zn_clien" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp" >

        <Button
            android:id="@+id/bt_empleados"
            android:layout_width="120dp"
            android:layout_height="100dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/empleados"
            android:onClick="empleados" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView4"
               android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tx_zona_emple"
                android:textColor="@color/orange"
                android:textSize="18sp" />

            <TextView
                android:paddingTop="10dp"
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                 android:text="@string/tx_zn_emp" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
