<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellowgreen"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.diego.chiefmanagement.LoginActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="50dp">

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_weight="0.26"
            android:src="@drawable/cabecera" />

    </LinearLayout>

    <TextView
        android:id="@+id/tv_dni"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="50dp"
        android:text="@string/tx_log_inf" 
        android:textSize="15sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="50dp" >

        <EditText
            android:id="@+id/ed_email"
            android:layout_width="226dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_edit_text"
            android:ems="10"
            android:hint="@string/tx_hi_email"
            android:inputType="textEmailAddress"
            android:textColor="@color/yellowgreen"
            android:textColorHint="@color/yellowgreen" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/ed_password"
            android:layout_width="226dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/rounded_edit_text"
            android:ems="10"
            android:hint="@string/tx_hi_pass"
            android:inputType="textPassword"
            android:textColor="@color/yellowgreen"
            android:textColorHint="@color/yellowgreen" />

        <Button
            android:id="@+id/bt_iniciar"
            android:layout_width="226dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_button"
            android:onClick="login"
            android:text="@string/tx_log_start" />

    </LinearLayout>

</LinearLayout>